Melhorias de performance no Dashboard e Pagamentos mês